kubernetes/clusters/base/_cluster-network-policy/allow-all-kube-system.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-kube-system
  namespace: kube-system
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
    - fromEndpoints:
        - {}
    - fromEntities:
        - world
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - {}
    - toEntities:
        - cluster
