kubernetes/clusters/base/_cluster-network-policy/allow-labeled-egress-internet.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-internet-egress
spec:
  description: Allows egress to the public internet from pods labeled networking/allow-egress-internet=true, excluding RFC1918 private IP ranges.
  endpointSelector:
    matchLabels:
      networking/allow-egress-internet: "true"
  egress:
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
