kubernetes/clusters/base/_cluster-network-policy/allow-labeled-egress-private.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-egress-private
spec:
  description: Allows egress to RFC1918 private IP ranges from pods labeled networking/allow-egress-private=true.
  endpointSelector:
    matchLabels:
      networking/allow-egress-private: "true"
  egress:
    - toCIDR:
        - 192.168.0.0/16
        - 10.0.0.0/8
        - 172.16.0.0/12
