kubernetes/clusters/base/_cluster-network-policy/allow-labeled-ingress-private.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-labeled-ingress-private
spec:
  description: Allows ingress from the 192.168.0.0/16 private IP range to pods labeled networking/allow-ingress-private=true.
  endpointSelector:
    matchLabels:
      networking/allow-ingress-private: "true"
  ingress:
    - fromCIDR:
        - 192.168.0.0/16
